--- a/demo/src/main/resources/application.yaml
+++ b/demo/src/main/resources/application.yaml
@@ -14,12 +14,12 @@ spring:
       driver-class-name: com.mysql.cj.jdbc.Driver
       url: jdbc:mysql://localhost:3306/ruiji_take-out_food?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
       username: root
-      password: 66271489tan
+      password: xxxxxx
 #      连不上远程服务器的redis
 #  redis:
-#    host: 8.130.100.162
+#    host: xxx.xxx.xxx.xxx
 #    port: 6379
-#    password: 66271489
+#    password: xxxxxx
 #    database: 0
   redis:
     host: 127.0.0.1
